map sentiment score to rgb (need to check the mapping)

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -113,9 +113,7 @@
         </form>
         &nbsp;
         <div class="form-container">
-            <div class="form-title"><h2>Example of JSON configuration</h2></div>
-             &nbsp;
-            <p><button type="button" class="submit-button" onclick="copyToClipboard(document.getElementById('json_example'))">Copy Review Example</button></p>
+            <div class="form-title"><h2>Example of a review in the JSON configuration</h2></div>
             <pre id="json_example" class="text_placeholder">
     {
        "review": "These gloves are a good fit for my hand and seem to be decent quality. However, they are not comfortable. There are three seams that converge between the index finger and thumb which creates a very annoying point in the glove. On my first ride I thought I had something caught inside my glove, but when I stopped to check it out, it was just the way the glove was constructed. The left glove is more annoying than the right, but it is there is both gloves. After a 20 mile ride, both hands had sores because of this. Unfortunately there is no way to fix or smooth out this problem. The second issue is that the gel padding is slightly out of place (for my hands anyway) so there is no benefit. I'll be returning these and looking for a new pair of gloves."
@@ -126,7 +124,9 @@
                 &nbsp;
                 <button type="button" class="submit-button" onclick="window.scrollTo(0, 0);">Go up</button>
             </p>
-            <p><button type="button" class="submit-button" onclick="copyToClipboard(document.getElementById('json_example2'))">Copy Sentences Example</button></p>
+        </div>
+        <div class="form-container">
+            <div class="form-title"><h2>Example of sentences in the JSON configuration</h2></div>
             <pre id="json_example2" class="text_placeholder">
     {
        "sentences": ["These gloves are a good fit for my hand and seem to be decent quality.",
