- add the service URLs in the developer web page

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -112,8 +112,9 @@
             More information about the algorithm, <a href="https://pypi.python.org/pypi/vaderSentiment">please see this link</a>
             </p>
             <p>
-            To use this web service, you can either POST a JSON with the following format: {"review":"review text...."} or {"sentences": ["sentence 1", "sentence 2",...] }
-            It returns an overall sentiment  of the review, which is called "overall_compound". Additionally, it returns the sentiment of each sentence as well as the individual polarity (negative, neutral, positive).
+            To use this web service, you can either POST a JSON with the following format: {"review":"review text...."} to http://peerlogic.csc.ncsu.edu/sentiment/analyze_review.
+            Alternatively, you can also break down the review into sentences by sending a JSON like {"sentences": ["sentence 1", "sentence 2",...] } to http://peerlogic.csc.ncsu.edu/sentiment/analyze_sentences.
+            Both return an overall sentiment  of the review, which is called "overall_compound". Additionally, it returns the sentiment of each sentence as well as the individual polarity (negative, neutral, positive).
             The service response is formatted in JSON format, as the following example shows:
             <pre>
     {
